--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 # Created by https://www.toptal.com/developers/gitignore/api/macos,eclipse,windows,intellij,visualstudiocode,go
 # Edit at https://www.toptal.com/developers/gitignore?templates=macos,eclipse,windows,intellij,visualstudiocode,go
 
-/repver
+oidcfinder
+domains.db
 
 ### Eclipse ###
 .metadata
